--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <!-- END: ENVIRONMENT -->
 
       <!-- BEGIN: DEMO -->
-      <a-text value"Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/nanumgothic/NanumGothic-Regular.json" scale="15 15 15" position="6.7 1 -2"></a-text>
+      <!-- <a-entity text="value:Hello; color:#000000; shader: msdf; font:https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothic/NanumGothic-Regular.json;" scale="15 15 15 " position="6.7 1 -2"></a-entity> -->
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothic/NanumGothic-Regular.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
       <!-- END: DEMO -->
 
     </a-scene>
