demo update - all fonts added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,20 @@
       <!-- END: ENVIRONMENT -->
 
       <!-- BEGIN: DEMO -->
-      <!-- <a-entity text="value:Hello; color:#000000; shader: msdf; font:https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothic/NanumGothic-Regular.json;" scale="15 15 15 " position="6.7 1 -2"></a-entity> -->
       <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothic/NanumGothic-Regular.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothic/NanumGothic-Bold.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothic/NanumGothic-ExtraBold.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumbrushscript/NanumBrushScript-Regular.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothiccoding/NanumGothicCoding-Regular.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumgothiccoding/NanumGothicCoding-Bold.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanummyeongjo/NanumMyeongjo-Regular.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanummyeongjo/NanumMyeongjo-Bold.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanummyeongjo/NanumMyeongjo-ExtraBold.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
+
+      <a-text value="Hello, 안녕!" color="#FFFFFF" shader="msdf" font="https://raw.githubusercontent.com/myso-kr/aframe-fonts-korean/master/fonts/ofl/nanumpenscript/NanumPenScript-Regular.json" scale="15 15 15" position="-3.5 1.5 -12"></a-text>
       <!-- END: DEMO -->
 
     </a-scene>
